--- a/samconfig.toml
+++ b/samconfig.toml
@@ -2,8 +2,11 @@ version = 0.1
 [default]
 [default.deploy]
 [default.deploy.parameters]
-stack_name = "csv-to-parquet-processor"
-resolve_image_repos = true
+stack_name = "proposal-processor-v2"
+region = "us-east-1"
 confirm_changeset = false
-fail_on_empty_changeset = false
 capabilities = "CAPABILITY_IAM"
+image_repositories = []
+parameter_overrides = "AWSAccountId=985803916100"
+s3_bucket = ""  # Will be provided by GitHub Actions
+resolve_s3 = true
